k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-auth-api
  name: pipelines-auth-api
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
      name: 1880-tcp
  selector:
    app: pipelines-auth-api
