k8s/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: auth-api
  name: el-auth-api
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-auth-api
    weight: 100
